ChangeLog for cryptmount (http://cryptmount.sourceforge.net)

20Dec22	- Updated various maintainer URLs to point to github.com
	Reduced verbosity of manual-page variable substitution
	Improved unit-test support for NVME devices

08Oct22	- *** cryptmount-6.1 released

01Oct22	- Improved udev settling schedule and filesystem syncs
	Added partial support for compiling against libgcrypt-1.7

25Sep22	- Improved waiting schedule for inter-process status locks
	Improved stability of tests against legacy cryptsetup

11Sep22	- Revised installation instructions and top-level README

03Sep22	- *** cryptmount-6.0 released

14Aug22	- Revised algorithm test-cases in mudslinger script to align to OpenSSL-3.0

06Aug22	- Refreshed cipher algorithm names to match OpenSSL/libgcrypt conventions
	Converted default libgcrypt keycipher to aes256-xts and keyhash to sha256

24Jul22	- Converted setup-script to use LUKS format by default

27Dec20	- Incorporated updated German translations from Helge Kreutzmann

06Sep20	- Refreshed cipher-mode and loop-device selection in "mudslinger" testing script

16Nov19	- Refined handling of passwords in "mudslinger" testing script

06Oct19	- Improved documentation of default values in cmtab manual page

28Sep19	- Removed use of 'minix' filesystem in testing script

06Jan19	- Fixed various memory leaks in mount/unmount pathways

05Jan19	- Fixed memory cleanup error on closedown when using multiple targets

17Mar18	- *** cryptmount-5.3 released

27Jan18	- Improved handling of LUKS plain files for libcryptsetup-2.x.
	Changed default location of cmtab to /etc/cryptmount/cmtab

17Jan18	- Minor updates to documentation & Debian packaging

16Dec17	- Patched to support cryptsetup-2.x
	Updated to automake-1.15

30Sep16	- Suppressed benign error codes when handling '--all' targets

11Aug16	- Improved detection of already configured targets

05Aug16	- Improved handling of '--all' with already mounted filesystems

02Apr16	- Updated bug-report email address
