@@ -1,6 +1,6 @@
 /*
  *  Filesystem-related utilities for cryptmount
- *  (C)Copyright 2005-2022, RW Penney
+ *  (C)Copyright 2005-2023, RW Penney
  */
 
 /*
@@ -719,5 +719,5 @@ int fs_test_entropy()
 #endif  /* TESTING */
 
 /*
- *  (C)Copyright 2005-2022, RW Penney
+ *  (C)Copyright 2005-2023, RW Penney
  */
