@@ -1,5 +1,5 @@
 .\" cmtab (cryptmount) manual page
-.\" Copyright (c) 2005-2022 RW Penney
+.\" (C)Copyright 2005-2023 RW Penney
 .\"
 
 .\" ---- macro definitions ----
@@ -547,7 +547,7 @@ but various advanced LUKS features must be accessed through
 .\" --------------------------------
 .SH COPYRIGHT NOTICE
 .B cryptmount
-is Copyright 2005-2022 RW Penney
+is Copyright 2005-2023, RW Penney
 .br
 and is supplied with NO WARRANTY.
 Licencing terms are as described in the file "COPYING"
